# java8to25

./: .gitignore  classpath.txt  config.json  install.bat  install.py  play.py  requirements.txt  updateconfiglist  updatelist
auth/: __init__.py  auth_pb2.py  auth_pb2_grpc.py  common_pb2.py  pyproject.toml  setup.py
config/: lwjgl3ify-early.json
mods/1.7.10/: desktop.ini
natives25/macos/arm64/org/lwjgl/: liblwjgl.dylib
natives25/macos/arm64/org/lwjgl/jemalloc/: libjemalloc.dylib
natives25/macos/arm64/org/lwjgl/nuklear/: liblwjgl_nuklear.dylib
natives25/macos/arm64/org/lwjgl/openal/: libopenal.dylib
natives25/macos/arm64/org/lwjgl/sdl/: libSDL3.dylib
natives25/macos/arm64/org/lwjgl/spng/: liblwjgl_spng.dylib
natives25/macos/arm64/org/lwjgl/zstd/: liblwjgl_zstd.dylib
natives25/macos/x64/org/lwjgl/: liblwjgl.dylib
natives25/macos/x64/org/lwjgl/freetype/: libfreetype.dylib
natives25/macos/x64/org/lwjgl/jemalloc/: libjemalloc.dylib
natives25/macos/x64/org/lwjgl/nuklear/: liblwjgl_nuklear.dylib
natives25/macos/x64/org/lwjgl/openal/: libopenal.dylib
natives25/macos/x64/org/lwjgl/opengl/: liblwjgl_opengl.dylib
natives25/macos/x64/org/lwjgl/sdl/: libSDL3.dylib
natives25/macos/x64/org/lwjgl/spng/: liblwjgl_spng.dylib
natives25/macos/x64/org/lwjgl/stb/: liblwjgl_stb.dylib
natives25/macos/x64/org/lwjgl/tinyfd/: liblwjgl_tinyfd.dylib
natives25/macos/x64/org/lwjgl/zstd/: liblwjgl_zstd.dylib
