[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auth"
version = "0.1.0"
description = "Mcskill auth"
authors = [{ name = "Faticc" }]
requires-python = ">=3.8"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/Faticc/java8to25"
